# rossum

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
rossum/: api.py  pdf.py  settings.py  utils.py
rossum/tests/: test_api.py  test_pdf.py
